--- a/index.html
+++ b/index.html
@@ -4,9 +4,103 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex</title>
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
+    <link rel="icon" href="favicon.png">
+    <title>FlexBox</title>
 </head>
 <body>
-    
+    <header>
+        Receptek
+    </header>
+    <div class="wrapper">
+        <div class="content">
+            <nav>
+                <ul>
+                    <li><a href="#">Előételek</a></li>
+                    <li><a href="#">Főételek</a></li>
+                    <li><a href="#">Levesek</a></li>
+                    <li><a href="#">Deszertek</a></li>
+                    <li><a href="#">Saláták</a></li>
+                    <li><a href="#">Turmixok</a></li>
+                    <li><a href="#">Sütemények</a></li>
+                </ul>
+            </nav>
+            <main>
+                <div class="recipes">
+                    <div class="recipe">
+                        <img src="image-1.jpg" alt="Kaja">
+                        <h2>Recept címe</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                    </div>
+                    <div class="recipe">
+                        <img src="image-2.jpg" alt="Kaja">
+                        <h2>Recept címe</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                    </div>
+                    <div class="recipe">
+                        <img src="image-3.jpg" alt="Kaja">
+                        <h2>Recept címe</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                    </div>
+                    <div class="recipe">
+                        <img src="image-4.jpg" alt="Kaja">
+                        <h2>Recept címe</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                    </div>
+                    <div class="recipe">
+                        <img src="image-5.jpg" alt="Kaja">
+                        <h2>Recept címe</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                    </div>
+                    <div class="recipe">
+                        <img src="image-6.jpg" alt="Kaja">
+                        <h2>Recept címe</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                    </div>
+                </div>
+                <div class="paginatoin">
+                    <span class="page">1</span>
+                    <a class="page" href="#">2</a>
+                    <a class="page" href="#">3</a>
+                    <a class="page" href="#">4</a>
+                    <a class="page" href="#">5</a>
+                    <a class="page" href="#">6</a>
+                    <a class="page" href="#">7</a>
+                    <a class="page" href="#">8</a>
+                    <a class="page" href="#">9</a>
+                    <a class="page" href="#">10</a>
+                    <a class="page" href="#">11</a>
+                    <a class="page" href="#">12</a>
+                    <a class="page" href="#">13</a>
+                    <a class="page" href="#">14</a>
+                    <a class="page" href="#">15</a>
+                    <a class="page" href="#">16</a>
+                    <a class="page" href="#">17</a>
+                    <a class="page" href="#">18</a>
+                </div>
+            </main>
+            <aside>
+                <ul>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                </ul>
+            </aside>
+        </div>
+    </div>
 </body>
 </html>
