--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                     <div class="recipe">
                         <img src="image-1.jpg" alt="Kaja">
                         <h2>Recept címe</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum.</p>
                     </div>
                     <div class="recipe">
                         <img src="image-2.jpg" alt="Kaja">
                         <h2>Recept címe</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="recipe">
                         <img src="image-3.jpg" alt="Kaja">
                         <h2>Recept címe</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas.</p>
                     </div>
                     <div class="recipe">
                         <img src="image-4.jpg" alt="Kaja">
@@ -50,12 +50,12 @@
                     <div class="recipe">
                         <img src="image-5.jpg" alt="Kaja">
                         <h2>Recept címe</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus.</p>
                     </div>
                     <div class="recipe">
                         <img src="image-6.jpg" alt="Kaja">
                         <h2>Recept címe</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero aliquam necessitatibus voluptatum ad consequuntur.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero.</p>
                     </div>
                 </div>
                 <div class="paginatoin">
@@ -81,22 +81,22 @@
             </main>
             <aside>
                 <ul>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet.</a></li>
+                    <li><a href="#">Lorem, ipsum.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor.</a></li>
                     <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
                     <li><a href="#">Lorem, ipsum dolor sit.</a></li>
                     <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor.</a></li>
                     <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur.</a></li>
                     <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur.</a></li>
                     <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
-                    <li><a href="#">Lorem, ipsum dolor sit.</a></li>
-                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
-                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
-                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
-                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
-                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
-                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
-                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
-                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
-                    <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
+                    <li><a href="#">Lorem, ipsum dolor sit amet.</a></li>
                     <li><a href="#">Lorem, ipsum dolor sit amet consectetur adipisicing.</a></li>
                 </ul>
             </aside>
