--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui minus quas modi vero.</p>
                     </div>
                 </div>
-                <div class="paginatoin">
+                <div class="pagination">
                     <span class="page">1</span>
                     <a class="page" href="#">2</a>
                     <a class="page" href="#">3</a>
